terraform 1.16/tf-mod-argocd/modules/argocd-net/manifests/shared/03_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ${global_static_ip_name}
    networking.gke.io/managed-certificates: ${ssl_certificate_name}
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: ${fe_config_name}
  labels:
    fingerprint: ${manifest_fingerprint}
spec:
  rules:
    - host: ${dns_name}
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: argocd-server
              port:
                number: 80
